<resources>
    <string name="app_name">Sample</string>
    <string name="login">Login</string>
    <string name="username_">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

    <string name="username_invalid">Username should be minimum 5 characters</string>
    <string name="username_empty_error">Username can\'t be empty</string>
    <string name="password_invalid">Password must be at least 6 characters long</string>
    <string name="password_empty_error">Password can\'t be empty</string>
    <string name="sermon">Sermon</string>
    <string name="classes">Classes</string>
    <string name="gospel">Gospel</string>
    <string name="archives">Archives</string>
    <string name="favorites">Favorites</string>
    <string name="prayers">Prayers</string>
    <string name="counseling">Counseling</string>
    <string name="donation">Donation</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="not_implemented">Not implemented</string>
    <string name="invalid_response">Invalid response</string>
    <string name="default_api_error">[E105] Default Api Error</string>
    <string name="session_expired">User Session Expired</string>
    <string name="time_out_error">Network time out</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="logout">Logout</string>
    <string name="key_not_found">Key not found</string>

</resources>